# terminal-use

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: emu.rs  keys.rs  main.rs  mouse.rs  output.rs  paths.rs  version_check.rs
src/commands/: cursor.rs  daemon_cmd.rs  kill.rs  list.rs  mod.rs  monitor.rs  mouse.rs  paste.rs  press.rs  resize.rs  run.rs  screenshot.rs  scrollback.rs  self_cmd.rs  snapshot.rs  status.rs  type_text.rs  usage.rs  wait.rs
src/daemon/: manager.rs  mod.rs  protocol.rs  server.rs  session.rs
src/pty/: input.rs  mod.rs  resize.rs  spawn.rs
src/render/: colors.rs  image.rs  mod.rs  screen.rs  text.rs
