[package]
name = "terminal-use"
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/flipbit03/terminal-use"
description = "Headless virtual terminal for AI agents"

[[bin]]
name = "tu"
path = "src/main.rs"

[features]
binary-release = []

[dependencies]
anyhow = "1"
ab_glyph = "0.2"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
font-kit = "0.14"
image = "0.25"
imageproc = "0.25"
nix = { version = "0.31", features = ["term", "signal", "process", "ioctl", "fs", "user", "poll"] }
vt100 = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
semver = "1"
